Grease Pencil Sketch mirror not occluded by geometry and "erases" foreground lines #59417

Closed
opened 2018-12-15 16:11:43 +01:00 by Thomas Parel · 13 comments

System Information
Operating system: Windows 10
Graphics card: GTX 970

Blender Version 2.8 Beta
Broken:
Currently the Grease Pencil 2 mirror seems to be erasing the foreground lines- Any thoughts on how to make the mirror occluded with geometry?

https://www.dropbox.com/s/5vk763ea7xka7yn/SketchTests.blend?dl=0&fbclid=IwAR09cDANFwFAuhQwH0DuZFzgqIFPiZCc1RorlIm2d7jasi6wGLjH2iW3Ndo

SketchTests.blend

**System Information** Operating system: Windows 10 Graphics card: GTX 970 **Blender Version** 2.8 Beta Broken: Currently the Grease Pencil 2 mirror seems to be erasing the foreground lines- Any thoughts on how to make the mirror occluded with geometry? https://www.dropbox.com/s/5vk763ea7xka7yn/SketchTests.blend?dl=0&fbclid=IwAR09cDANFwFAuhQwH0DuZFzgqIFPiZCc1RorlIm2d7jasi6wGLjH2iW3Ndo [SketchTests.blend](https://archive.blender.org/developer/F5962376/SketchTests.blend)
Author

Added subscriber: @ThomasParel

Added subscriber: @ThomasParel

Added subscriber: @antoniov

Added subscriber: @antoniov

I'm not sure what you mean with, occlude with geometry, but if you mean that if you have any mesh over strokes the eraser must not erase strokes, then you are using a wrong point of view. Grease Pencil "lives" in its own universe. When you draw or erase in GP, you are working with GP only. GP does not "see" any other object outside "its world". This is designed in this way, not a bug.

I'm not sure what you mean with, occlude with geometry, but if you mean that if you have any mesh over strokes the eraser must not erase strokes, then you are using a wrong point of view. Grease Pencil "lives" in its own universe. When you draw or erase in GP, you are working with GP only. GP does not "see" any other object outside "its world". This is designed in this way, not a bug.
Author

Perhaps 'occluded" has a specific technical meaning- but I was using it to mean "hidden" or obstructed- that GP strokes were not being hidden by geometry.
Hopefully the attached video will give you a clearer understanding of the behavior I was referring to. Many concept designers are going to sketch out surface detail on blocked in geometry- the current behavior will interfere with that workflow.

Video Link here: https://www.dropbox.com/s/4n7hi3chapfsk0p/Blender_GP2_MirrorProblem.mp4?dl=0

Perhaps 'occluded" has a specific technical meaning- but I was using it to mean "hidden" or obstructed- that GP strokes were not being hidden by geometry. Hopefully the attached video will give you a clearer understanding of the behavior I was referring to. Many concept designers are going to sketch out surface detail on blocked in geometry- the current behavior will interfere with that workflow. Video Link here: https://www.dropbox.com/s/4n7hi3chapfsk0p/Blender_GP2_MirrorProblem.mp4?dl=0
Antonio Vazquez self-assigned this 2018-12-16 13:38:16 +01:00

I see now... I think we can do something. We had something similar in 2.7x, so I can backport this functionality.

I see now... I think we can do something. We had something similar in 2.7x, so I can backport this functionality.
Author

Awesome- Thanks for looking at this Antonio

Awesome- Thanks for looking at this Antonio

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added new occlude button.

image.png

Added new occlude button. ![image.png](https://archive.blender.org/developer/F5973079/image.png)
Author

Is this already in the daily build?

Is this already in the daily build?

Added subscriber: @capnm

Added subscriber: @capnm

Hi guys, I'm trying to understand what problems you want to solve.
Looks like you're talking about two different issues.

Added new occlude button.

Could you explain why and what exactly it does?
(I haven't had time to go through the GP source code yet)

GP strokes were not being hidden by geometry

I believe this is an issue of the 3D Space Depth Ordering.
Looks like the mirror modifier makes something wrong to the stroke
normals.

Right side painted:
image.png

Left side applied from the mirror modifier:
image.png

Thanks!

Hi guys, I'm trying to understand what problems you want to solve. Looks like you're talking about two different issues. > Added new occlude button. Could you explain why and what exactly it does? (I haven't had time to go through the GP source code yet) > GP strokes were not being hidden by geometry I believe this is an issue of the 3D Space Depth Ordering. Looks like the mirror modifier makes something wrong to the stroke normals. Right side painted: ![image.png](https://archive.blender.org/developer/F5976615/image.png) Left side applied from the mirror modifier: ![image.png](https://archive.blender.org/developer/F5976634/image.png) Thanks!

Yes, there are an issue with z-depth ordering not related to occlude eraser. We are working on it already.

Yes, there are an issue with z-depth ordering not related to occlude eraser. We are working on it already.
Author

Thanks Capnm- z-depth ordering seems to describe the problem- and after playing some more it is independent of the mirror.

Thanks Capnm- z-depth ordering seems to describe the problem- and after playing some more it is independent of the mirror.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59417
No description provided.