release/scripts/startup/bl_ui/space_view3d_toolbar.py
@@ -1501,6 +1501,7 @@ class VIEW3D_PT_tools_grease_pencil_brush(View3DPanel, Panel):
                 row = layout.row(align=True)
                 row.prop(brush, "size", text="Radius")
                 row.prop(gp_settings, "use_pressure", text="", icon='STYLUS_PRESSURE')
+                row.prop(gp_settings, "use_occlude_eraser", text="", icon='XRAY')
 
                 if gp_settings.eraser_mode == 'SOFT':
                     row = layout.row(align=True)
